@@ -1,28 +1,25 @@
 package com.openclassrooms.starterjwt.mapper;
 
-import com.openclassrooms.starterjwt.SpringBootSecurityJwtApplication;
 import com.openclassrooms.starterjwt.dto.SessionDto;
 import com.openclassrooms.starterjwt.models.Session;
 import com.openclassrooms.starterjwt.models.Teacher;
+import com.openclassrooms.starterjwt.models.User;
 import com.openclassrooms.starterjwt.services.TeacherService;
 import com.openclassrooms.starterjwt.services.UserService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mapstruct.factory.Mappers;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-// TODO Fix le SessionMapping
-@ExtendWith(MockitoExtension.class)
-@SpringBootTest(classes = SpringBootSecurityJwtApplication.class)
 class SessionMapperTest {
 
     @Mock
@@ -31,28 +28,66 @@ class SessionMapperTest {
     @Mock
     private UserService userService;
 
-    private SessionMapper sessionMapper;
-
+    @InjectMocks
+    private SessionMapper sessionMapper = Mappers.getMapper(SessionMapper.class);
     @BeforeEach
-    void setUp() {
-        sessionMapper = Mappers.getMapper(SessionMapper.class);
+    public void setUp() {
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
     void toEntity_shouldMapDtoToEntity() {
         SessionDto sessionDto = new SessionDto();
-        sessionDto.setDescription("Hello");
+        sessionDto.setId(1L);
+        sessionDto.setName("Session");
+        sessionDto.setDescription("Description of Session 1");
         sessionDto.setTeacher_id(7L);
-        sessionDto.setUsers(Arrays.asList(9L, 3L, 4L));
+        sessionDto.setUsers(List.of(6L));
+
         Teacher teacher = new Teacher();
         teacher.setId(7L);
         when(teacherService.findById(7L)).thenReturn(teacher);
 
+        User user = new User();
+        user.setId(6L);
+        when(userService.findById(6L)).thenReturn(user);
+
         Session session = sessionMapper.toEntity(sessionDto);
 
         verify(teacherService).findById(7L);
+        verify(userService).findById(6L);
+        assertEquals(sessionDto.getId(), session.getId());
+        assertEquals(sessionDto.getName(), session.getName());
         assertEquals(sessionDto.getDescription(), session.getDescription());
-        assertEquals(sessionDto.getTeacher_id(), session.getTeacher().getId()); //?
-        assertEquals(sessionDto.getUsers(), session.getUsers());
+        assertEquals(sessionDto.getTeacher_id(), session.getTeacher().getId());
+        assertEquals(user.getId(), session.getUsers().get(0).getId());
     }
+
+    @Test
+    void toMapping_shouldMapEntityToDto() {
+        Teacher teacher = new Teacher();
+        teacher.setId(9L);
+
+        User user = new User();
+        user.setId(2L);
+
+        Session session = new Session();
+        session.setId(2L);
+        session.setName("Session 2");
+        session.setDate(new Date(2024,7,7));
+        session.setDescription("Description of Session 2");
+        session.setTeacher(teacher);
+        session.setUsers(List.of(user));
+
+        when(userService.findById(6L)).thenReturn(user);
+
+        SessionDto sessionDto = sessionMapper.toDto(session);
+
+        assertEquals(session.getId(), sessionDto.getId());
+        assertEquals(session.getName(), sessionDto.getName());
+        assertEquals(session.getDescription(), sessionDto.getDescription());
+        assertEquals(session.getTeacher().getId(), sessionDto.getTeacher_id());
+        assertEquals(session.getUsers().get(0).getId(), user.getId());
+    }
+
 }
